--- a/appbar.html
+++ b/appbar.html
@@ -30,7 +30,7 @@
         </div>
         <div class="search-bar">
             <form>
-                <input id="search-field">
+                <input id="search-field" type="text" name="search-field">
                 <button class="search-button"></button>
             </form>
         </div>
