--- a/appbar.html
+++ b/appbar.html
@@ -5,9 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>배민찬</title>
 </head>
 <body>
+<div class="header-wrapper">
     <div class="top-navigation">
         <div class="app-download">
             <span>배민찬 앱 다운로드</span>
@@ -41,17 +43,19 @@
             </ul>
         </div>
     </div>
-    <div class="menu-bar">
-        <ul>
-            <li>밑반찬</li>
-            <li>국·찌개</li>
-            <li>메인반찬</li>
-            <li>아이반찬</li>
-            <li>정기식단</li>
-            <li>신선·가공</li>
-            <li>간식</li>
-            <li>브랜드관</li>
-        </ul>
-    </div>
+</div>
+<div class="menu-bar">
+    <ul>
+        <li>밑반찬</li>
+        <li>국·찌개</li>
+        <li>메인반찬</li>
+        <li>아이반찬</li>
+        <li>정기식단</li>
+        <li>신선·가공</li>
+        <li>간식</li>
+        <li>브랜드관</li>
+    </ul>
+</div>
+
 </body>
 </html>
