html tag class name 적용
html tag에 css 고려하여 class name 적용

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Auto Complete</title>
 </head>
 <body>
     <header>
-        <div class="">
+        <div class="infomation">
             <span>배민찬 앱 다운로드</span>
             <ul>
                 <li>로그인</li>
@@ -20,14 +21,14 @@
                 <li><b>장바구니</b></li>
             </ul>
         </div>
-        <div class="">
-            <img src="./image/bmc-logo.png" alt="">
-            <form class="" action="index.html" method="post">
+        <div class="header">
+            <img class="main_logo" src="./image/bmc-logo.png" alt="logo_image">
+            <form class="search_bar" action="index.html" method="post">
                 <input type="text" name="" value="">
-                <button type="button" name="button"><img src="./image/ic_search.png" alt=""></button>
+                <button type="button" name="button"><img src="./image/ic_search.png" alt="button_image"></button>
             </form>
-            <img src="./image/best-logo.png" alt="">
-            <img src="./image/shopping-logo.jpg" alt="">
+            <img class="best_logo" src="./image/best-logo.png" alt="best_logo_image">
+            <img class="shopping_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
         </div>
     </header>
     <main>
@@ -40,37 +41,37 @@
                 <li>정기식단</li>
                 <li>신선·가공</li>
                 <li>간식</li>
-                <li>브랜드관</li>
+                <li class="brand_shop">브랜드관</li>
             </ul>
         </nav>
-        <div class="">
-            <img src="./image/side-dish-logo.png" alt="">
+        <div class="menu_container">
+            <img class="side_dishi_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
             <div>
-                <img src="./image/arrow.png" alt="left">
-                <img src="./image/arrow.png" alt="right">
-                <div>
-                    <img src="./image/food1.jpg" alt="">
+                <img class="left_arrow" src="./image/arrow.png" alt="left">
+                <img class="right_arrow" src="./image/arrow.png" alt="right">
+                <div class="menu">
+                    <img class="food_image" src="./image/food1.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span>원래가격</span><span>판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
-                <div>
-                    <img src="./image/food2.jpg" alt="">
+                <div class="menu">
+                    <img class="food_image" src="./image/food2.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span>원래가격</span><span>판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
-                <div>
+                <div class="menu">
                     <img src="./image/food3.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span>원래가격</span><span>판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
-                <div>
+                <div class="menu">
                     <img src="./image/food4.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span>원래가격</span><span>판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
             </div>
         </div>
