--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="infomation">
+        <div id="infomation">
             <span>배민찬 앱 다운로드</span>
             <ul>
                 <li>로그인</li>
@@ -21,14 +21,14 @@
                 <li><b>장바구니</b></li>
             </ul>
         </div>
-        <div class="header">
-            <img class="main_logo" src="./image/bmc-logo.png" alt="logo_image">
-            <form class="search_bar" action="index.html" method="post">
+        <div id="header">
+            <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
+            <form id="search_bar" action="index.html" method="post">
                 <input type="text" name="" value="">
                 <button type="button" name="button"><img src="./image/ic_search.png" alt="button_image"></button>
             </form>
-            <img class="best_logo" src="./image/best-logo.png" alt="best_logo_image">
-            <img class="shopping_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
+            <img class="side_logo" src="./image/best-logo.png" alt="best_logo_image">
+            <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
         </div>
     </header>
     <main>
@@ -41,33 +41,33 @@
                 <li>정기식단</li>
                 <li>신선·가공</li>
                 <li>간식</li>
-                <li class="brand_shop">브랜드관</li>
+                <li id="brand_shop">브랜드관</li>
             </ul>
         </nav>
-        <div class="menu_container">
-            <img class="side_dishi_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
+        <div id="menu_container">
+            <img id="side_dish_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
             <div>
-                <img class="left_arrow" src="./image/arrow.png" alt="left">
-                <img class="right_arrow" src="./image/arrow.png" alt="right">
-                <div class="menu">
+                <img class="arrow" id="left_arrow" src="./image/arrow.png" alt="left">
+                <img class="arrow" id="right_arrow" src="./image/arrow.png" alt="right">
+                <div class="menu" id="menu1">
                     <img class="food_image" src="./image/food1.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
                     <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
-                <div class="menu">
+                <div class="menu" id="menu2">
                     <img class="food_image" src="./image/food2.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
                     <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
-                <div class="menu">
+                <div class="menu" id="menu3">
                     <img src="./image/food3.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
                     <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
                 </div>
-                <div class="menu">
+                <div class="menu" id="menu4">
                     <img src="./image/food4.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
