Added header-wrapper and mouse hovering
added header-wrapper, so the contents stay at the center 980 px.
added mouse hovering properties for a tag elements: color -> mint,
cursor -> pointer.

--- a/appbar.html
+++ b/appbar.html
@@ -9,24 +9,27 @@
     <title>배민찬</title>
 </head>
 <body>
-<div class="header-wrapper">
-    <div class="top-navigation">
-        <div class="app-download">
-            <span>배민찬 앱 다운로드</span>
-        </div>
-        <div class="system-navigation">
-            <ul>
-                <li>로그인</li>
-                <li>회원가입</li>
-                <li>마이페이지</li>
-                <li>고객센터</li>
-                <li>새벽배송 지역검색</li>
-                <li>이벤트 게시판</li>
-                <li>장바구니</li>
-            </ul>
-        </div>
+
+
+	<div class="top-navigation"> 
+		<div class="header-wrapper"> 
+			<div class="app-download">
+	            <span><a href="#" class="hover-link">배민찬 앱 다운로드</a></span>
+	        </div>
+	        <div class="system-navigation">
+	            <ul>
+	                <li><a href="#" class="hover-link">로그인</a></li>
+	                <li><a href="#" class="hover-link">회원가입</a></li>
+	                <li><a href="#" class="hover-link">마이페이지</a></li>
+	                <li><a href="#" class="hover-link">고객센터</a></li>
+	                <li><a href="#" class="hover-link">새벽배송 지역검색</a></li>
+	                <li><a href="#" class="hover-link">이벤트 게시판</a></li>
+	                <li><a href="#">장바구니</a></li>
+	            </ul>
+	        </div>
+		</div>  
     </div>
-    <div class="header">
+    <div class="header header-wrapper">
         <div class="logo">
             <img src="https://cdn.bmf.kr/web/common/bmc-logo.png">
         </div>
@@ -43,19 +46,18 @@
             </ul>
         </div>
     </div>
-</div>
-<div class="menu-bar">
-    <ul>
-        <li>밑반찬</li>
-        <li>국·찌개</li>
-        <li>메인반찬</li>
-        <li>아이반찬</li>
-        <li>정기식단</li>
-        <li>신선·가공</li>
-        <li>간식</li>
-        <li>브랜드관</li>
-    </ul>
-</div>
+    <div class="menu-bar">
+	    <ul class="header-wrapper">
+	        <li><a href="#" class="hover-link">밑반찬</a></li>
+	        <li><a href="#" class="hover-link">국·찌개</a></li>
+	        <li><a href="#" class="hover-link">메인반찬</a></li>
+	        <li><a href="#" class="hover-link">아이반찬</a></li>
+	        <li><a href="#" class="hover-link">정기식단</a></li>
+	        <li><a href="#" class="hover-link">신선·가공</a></li>
+	        <li><a href="#" class="hover-link">간식</a></li>
+	        <li><a href="#" class="hover-link">브랜드관</a></li>
+	    </ul>
+	</div>
 
 </body>
 </html>
