--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="infomation">
+        <div id="information">
             <span>배민찬 앱 다운로드</span>
             <ul>
                 <li>로그인</li>
