--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
             <form id="search_bar" action="index.html" method="post">
                 <input type="text" name="" value="">
-                <button type="button" name="button"><img src="./image/ic_search.png" alt="button_image"></button>
+                <button type="button" name="button"></button>
             </form>
-            <img class="side_logo" src="./image/best-logo.png" alt="best_logo_image">
             <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
+            <img class="side_logo" src="./image/best-logo.png" alt="best_logo_image">
         </div>
     </header>
     <main>
