js 클래스 구조를 생성하고 자동완성 로직을 작성하다.
js 모든 클래스 구조를 생성했습니다.
자동완성 로직을 작성했습니다.

--- a/appbar.html
+++ b/appbar.html
@@ -9,9 +9,7 @@
     <title>배민찬</title>
 </head>
 <body>
-
-
-	<div class="top-navigation"> 
+	<div class="top-navigation">
 		<div class="header-wrapper"> 
 			<div class="app-download">
 	            <span><a href="#" class="hover-link">배민찬 앱 다운로드</a></span>
@@ -59,5 +57,6 @@
 	    </ul>
 	</div>
 
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
