--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div id="menu_container">
             <img id="side_dish_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
             <div>
-                <img class="arrow" id="left_arrow" src="./image/arrow.png" alt="left">
-                <img class="arrow" id="right_arrow" src="./image/arrow.png" alt="right">
+                <button type="button" class="arrow" id="left_arrow" name="button"></button>
+                <button type="button" class="arrow" id="right_arrow" name="button"></button>
                 <div class="menu" id="menu1">
                     <img class="food_image" src="./image/food1.jpg" alt="">
                     <h3>제목</h3>
