--- a/index.html
+++ b/index.html
@@ -47,31 +47,33 @@
         <div id="menu_container">
             <img id="side_dish_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
             <div>
-                <button type="button" class="arrow" id="left_arrow" name="button"></button>
-                <button type="button" class="arrow" id="right_arrow" name="button"></button>
+                <div>
+                    <button type="button" class="arrow" id="left_arrow" name="button"></button>
+                    <button type="button" class="arrow" id="right_arrow" name="button"></button>
+                </div>
                 <div class="menu" id="menu1">
                     <img class="food_image" src="./image/food1.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
                 </div>
                 <div class="menu" id="menu2">
                     <img class="food_image" src="./image/food2.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
                 </div>
                 <div class="menu" id="menu3">
-                    <img src="./image/food3.jpg" alt="">
+                    <img class="food_image" src="./image/food3.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
                 </div>
                 <div class="menu" id="menu4">
-                    <img src="./image/food4.jpg" alt="">
+                    <img class="food_image" src="./image/food4.jpg" alt="">
                     <h3>제목</h3>
                     <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격</span></div>
+                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
                 </div>
             </div>
         </div>
