Create autocomplete list window and Function
검색어에 따른 자동완성 리스트 DOM 및 기능 구현
키워드 하이라이팅 기능 구현
Rendering / Hovering 기능 추가

--- a/appbar.html
+++ b/appbar.html
@@ -33,9 +33,14 @@
         </div>
         <div class="search-bar">
             <form>
-                <input id="search-field" type="text" name="search-field">
+                <input id="search-field" type="text" name="search-field" autocomplete="off">
                 <button class="search-button"></button>
             </form>
+            <div class="auto-complete-window">
+                <ul class="auto-complete-list">
+
+                </ul>
+            </div>
         </div>
         <div class="quick-link">
             <ul>
