--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div id="menu_container">
             <img id="side_dish_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
             <div>
-                <div>
+                <!-- <div> -->
                     <button type="button" class="arrow" id="left_arrow" name="button"></button>
-                    <button type="button" class="arrow" id="right_arrow" name="button"></button>
-                </div>
+                    <!-- <button type="button" class="arrow" id="right_arrow" name="button"></button> -->
+                <!-- </div> -->
                 <div class="menu" id="menu1">
                     <img class="food_image" src="./image/food1.jpg" alt="">
                     <h3>제목</h3>
@@ -75,6 +75,7 @@
                     <p>설명</p>
                     <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
                 </div>
+                <button type="button" class="arrow" id="right_arrow" name="button"></button>
             </div>
         </div>
     </main>
