javascript 파일 초기화
javascript html 연결, 설계도를 기반으로
객체까지만 생성

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="header">
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
             <form id="search_bar" action="index.html" method="post">
-                <input type="text" name="" value="">
+                <input type="text" name="" value="" id="input_box">
                 <button type="button" name="button"></button>
             </form>
             <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
@@ -47,10 +47,7 @@
         <div id="menu_container">
             <img id="side_dish_logo" src="./image/side-dish-logo.png" alt="side_dish_logo">
             <div>
-                <!-- <div> -->
-                    <button type="button" class="arrow" id="left_arrow" name="button"></button>
-                    <!-- <button type="button" class="arrow" id="right_arrow" name="button"></button> -->
-                <!-- </div> -->
+                <button type="button" class="arrow" id="left_arrow" name="button"></button>
                 <div class="menu" id="menu1">
                     <img class="food_image" src="./image/food1.jpg" alt="">
                     <h3>제목</h3>
@@ -79,6 +76,6 @@
             </div>
         </div>
     </main>
-
+<script src="script.js"></script>
 </body>
 </html>
