javascript autocomlete 보이기 추가
검색버튼을 눌렀을때 autocomplete를 열게 함

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
             <form id="search_bar" action="index.html" method="post">
                 <input type="text" name="" value="" id="input_box">
-                <button type="button" name="button"></button>
+                <button type="button" name="button" onclick="searchBar.searchButtonClickEvent()"></button>
+                <div class="result_list">
+                    <ul>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                        <li>adasda</li>
+                    </ul>
+                </div>
             </form>
             <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
             <img class="side_logo" src="./image/best-logo.png" alt="best_logo_image">
