--- a/index.html
+++ b/index.html
@@ -24,21 +24,9 @@
         <div id="header">
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
             <form id="search_bar" action="index.html" method="post">
-                <input type="text" name="" value="" id="input_box">
+                <input type="text" name="" value="" id="input_box" onkeyup="searchBar.checkKeyType(event)">
                 <button type="button" name="button" onclick="searchBar.searchButtonClickEvent()"></button>
-                <div class="result_list">
-                    <ul>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                        <li>adasda</li>
-                    </ul>
-                </div>
+                <div class="result_list"></div>
             </form>
             <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
             <img class="side_logo" src="./image/best-logo.png" alt="best_logo_image">
