side-dish의 정렬 문제를 공유하다.
side-dish-title과 thumb-imgs를 세로로 정렬하고 싶습니다.

--- a/main.html
+++ b/main.html
@@ -5,12 +5,84 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<script src="https://www.w3schools.com/lib/w3.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>배민찬</title>
 </head>
 <body>
-	<!--<div id="app-bar"></div>-->
-	<link rel="import" href="appbar.html">
+	<!--appbar start-->
+	<div class="app-bar">
+		<div class="top-navigation">
+			<div class="header-wrapper">
+				<div class="app-download">
+					<span><a href="#" class="hover-link">배민찬 앱 다운로드</a></span>
+				</div>
+				<div class="system-navigation">
+					<ul>
+						<li><a href="#" class="hover-link">로그인</a></li>
+						<li><a href="#" class="hover-link">회원가입</a></li>
+						<li><a href="#" class="hover-link">마이페이지</a></li>
+						<li><a href="#" class="hover-link">고객센터</a></li>
+						<li><a href="#" class="hover-link">새벽배송 지역검색</a></li>
+						<li><a href="#" class="hover-link">이벤트 게시판</a></li>
+						<li><a href="#">장바구니</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="header header-wrapper">
+			<div class="logo">
+				<img src="https://cdn.bmf.kr/web/common/bmc-logo.png">
+			</div>
+			<div class="search-bar">
+				<form>
+					<input id="search-field" type="text" name="search-field" autocomplete="off">
+					<button class="search-button"></button>
+				</form>
+				<div class="auto-complete-window">
+					<ul class="auto-complete-list">
+
+					</ul>
+				</div>
+			</div>
+			<div class="quick-link">
+				<ul>
+					<li><img src="https://cdn.bmf.kr/banner/p_gnb1/170406/1491459737880_7ce6cb7c14c5.png"></li>
+					<li><img src="https://cdn.bmf.kr/banner/p_gnb2/171228/1514426530229_82c43181b982.jpg"></li>
+				</ul>
+			</div>
+		</div>
+		<div class="menu-bar">
+			<ul class="header-wrapper">
+				<li><a href="#" class="hover-link">밑반찬</a></li>
+				<li><a href="#" class="hover-link">국·찌개</a></li>
+				<li><a href="#" class="hover-link">메인반찬</a></li>
+				<li><a href="#" class="hover-link">아이반찬</a></li>
+				<li><a href="#" class="hover-link">정기식단</a></li>
+				<li><a href="#" class="hover-link">신선·가공</a></li>
+				<li><a href="#" class="hover-link">간식</a></li>
+				<li><a href="#" class="hover-link">브랜드관</a></li>
+			</ul>
+		</div>
+	</div>
+	<!--appbar end-->
+	<!--main start-->
+	<div class="main-contents">
+		<div class="side-dish header-wrapper">
+			<div class="side-dish-title">
+				<img src="https://cdn.bmf.kr/_data/files/category/category_17030000/d4b9fdb70ad303d186b8db2a82255402.png">
+			</div>
+			<div class="slider">
+				<ul class="thumb-imgs">
+					<li><img src="./res/dish1.jpeg"></li>
+					<li><img src="./res/dish2.jpeg"></li>
+					<li><img src="./res/dish3.jpeg"></li>
+					<li><img src="./res/dish1.jpeg"></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!--main end-->
 	<script src="app.js"></script>
 </body>
 </html>
