Fixed 스타일 and Added focusout 이벤트
top-navigation의 글씨색을 수정했습니다.
search-bar의 css를 수정했습니다.
menu-bar의 글씨 크기와 볼트 처리를 적용했습니다.
브랜드관의 배경색을 변경했습니다.

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 						<li><a href="#" class="hover-link">고객센터</a></li>
 						<li><a href="#" class="hover-link">새벽배송 지역검색</a></li>
 						<li><a href="#" class="hover-link">이벤트 게시판</a></li>
-						<li><a href="#">장바구니</a></li>
+						<li><a href="#"><strong>장바구니</strong></a></li>
 					</ul>
 				</div>
 			</div>
@@ -61,7 +61,7 @@
 				<li><a href="#" class="hover-link">정기식단</a></li>
 				<li><a href="#" class="hover-link">신선·가공</a></li>
 				<li><a href="#" class="hover-link">간식</a></li>
-				<li><a href="#" class="hover-link">브랜드관</a></li>
+				<li class="brand"><a href="#" class="hover-link">브랜드관</a></li>
 			</ul>
 		</div>
 	</div>
