--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="header">
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
             <form id="search_bar" action="index.html" method="post">
-                <input type="text" name="" value="" id="input_box" onkeyup="eventHandler.pressKeyEvent(event)">
+                <input type="text" name="" value="" id="input_box" onkeyup="eventHandler.onKeyUp(event)" onkeydown="eventHandler.onKeyDown(event)">
                 <button type="button" name="button" onclick="eventHandler.searchButtonEvent()"></button>
                 <div class="result_list"></div>
             </form>
