--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div id="header">
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
-            <form id="search_bar" action="index.html" method="post">
-                <input type="text" name="" value="" id="input_box" onkeyup="eventHandler.onKeyUp(event)" onkeydown="eventHandler.onKeyDown(event)">
+            <form id="search_bar" action="#">
+                <input type="text" name="" value="" id="input_box" onkeyup="eventHandler.onKeyUp(event)" onkeydown="eventHandler.onKeyDown(event)" autocomplete="off">
                 <button type="button" name="button" onclick="eventHandler.searchButtonEvent()"></button>
                 <div class="result_list"></div>
             </form>
