--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
                 <button type="button" class="arrow" id="left_arrow" name="button"></button>
                 <div class="menu" id="menu1">
                     <img class="food_image" src="./image/food1.jpg" alt="">
-                    <h3>제목</h3>
-                    <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
+                    <h3>[집반찬연구소] 굴생채무침 200g</h3>
+                    <p>바다의 향기를 제대로 느낄 수 있어요.</p>
+                    <div><span class="n_price">5,800원</span><span class="s_price">5,390<span class="won">원</span></span></div>
                 </div>
                 <div class="menu" id="menu2">
                     <img class="food_image" src="./image/food2.jpg" alt="">
-                    <h3>제목</h3>
-                    <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
+                    <h3>[집밥의완성] 시금치호두양념무침 200g</h3>
+                    <p>호두로 영양은 물론 고소함까지</p>
+                    <div><span class="s_price">3,900<span class="won">원</span></span></div>
                 </div>
                 <div class="menu" id="menu3">
                     <img class="food_image" src="./image/food3.jpg" alt="">
-                    <h3>제목</h3>
-                    <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
+                    <h3>[너의반찬] 잔멸치 견과류 볶음 100g</h3>
+                    <p>메이플 시럽의 달달한 향 덕에 아이들도 참 좋아해요.</p>
+                    <div><span class="s_price">4,500<span class="won">원</span></span></div>
                 </div>
                 <div class="menu" id="menu4">
                     <img class="food_image" src="./image/food4.jpg" alt="">
-                    <h3>제목</h3>
-                    <p>설명</p>
-                    <div><span class="n_price">원래가격</span><span class="s_price">판매가격<span class="won">원</span></span></div>
+                    <h3>[마더앤찬] 상큼한 파래초무침 140g</h3>
+                    <p>바다 향이 물씬 퍼지는 듯해요!</p>
+                    <div><span class="s_price">5,500<span class="won">원</span></span></div>
                 </div>
                 <button type="button" class="arrow" id="right_arrow" name="button"></button>
             </div>
