--- a/main.html
+++ b/main.html
@@ -47,8 +47,8 @@
 			</div>
 			<div class="quick-link">
 				<ul>
-					<li><img src="https://cdn.bmf.kr/banner/p_gnb1/170406/1491459737880_7ce6cb7c14c5.png"></li>
-					<li><img src="https://cdn.bmf.kr/banner/p_gnb2/171228/1514426530229_82c43181b982.jpg"></li>
+					<li><img src="./res/quick_best.png"></li>
+					<li><img src="./res/quick_sale.jpg"></li>
 				</ul>
 			</div>
 		</div>
