--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div id="header">
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
             <form id="search_bar" action="#">
-                <input type="text" name="" value="" id="input_box" onkeyup="eventHandler.onKeyUp(event)" onkeydown="eventHandler.onKeyDown(event)" autocomplete="off">
-                <button type="button" name="button" onclick="eventHandler.searchButtonEvent()"></button>
+                <input type="text" name="" value="" id="input_box" autocomplete="off">
+                <button type="button" name="button" id="search_button"></button>
                 <div class="result_list"></div>
             </form>
             <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
