마우스 hovering 이벤트 추가

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             <form id="search_bar" action="#">
                 <input type="text" name="" value="" id="input_box" autocomplete="off">
                 <button type="button" name="button" id="search_button"></button>
-                <div class="result_list"></div>
+                <div class="result_list">
+                    <ul>
+                        
+                    </ul>
+                </div>
             </form>
             <img class="side_logo" src="./image/shopping-logo.jpg" alt="shopping_logo_image">
             <img class="side_logo" src="./image/best-logo.png" alt="best_logo_image">
