--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
             </div>
         </div>
     </main>
-<script src="script.js"></script>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
