Edit search event logic
Now refresh the webpage with search word when search event
is called. (e.g. by pressing enter or clicking the word)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="header">
             <img id="main_logo" src="./image/bmc-logo.png" alt="logo_image">
-            <form id="search_bar" action="#">
+            <form id="search_bar" method="GET" accept-charset="utf-8">
                 <input type="text" name="" value="" id="input_box" autocomplete="off">
                 <button type="button" name="button" id="search_button"></button>
                 <div class="result_list">
