--- a/test/main.test.html
+++ b/test/main.test.html
@@ -32,9 +32,9 @@
         </div>
         <script src="../node_modules/mocha/mocha.js"></script>
         <script src="../node_modules/chai/chai.js"></script>
-        <script type="text/javascript" src="../script.js"></script>
         <script>mocha.setup('bdd')</script>
-        <script src="main.test.js"></script>
+        <script type="text/javascript" src="bundle-test.js"></script>
+        <!-- <script src="main.test.js"></script> -->
         <script>
             mocha.run();
         </script>
