Fixed few bugs on autocomplete. Code share.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div id="header">
-            <a href="./"><img id="main_logo" src="./image/bmc-logo.png" alt="logo_image"></a>
+            <a href="./index.html"><img id="main_logo" src="./image/bmc-logo.png" alt="logo_image"></a>
             <form id="search_bar" method="GET" accept-charset="utf-8">
                 <input type="text" name="" value="" id="input_box" autocomplete="off">
                 <button type="button" name="button" id="search_button"></button>
